# CTFd

./: .git-blame-ignore-revs  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: lint.yml  mariadb.yml  mysql.yml  mysql8.yml  postgres.yml  sqlite.yml  verify-themes.yml
CTFd/: __init__.py  auth.py
CTFd/admin/: __init__.py  submissions.py
CTFd/api/v1/: challenges.py  solutions.py
CTFd/cache/: __init__.py
CTFd/models/: __init__.py
CTFd/plugins/bloods/: __init__.py  readme.md
CTFd/plugins/bloods/templates/: admin_bloods.html  bloods.html
CTFd/plugins/bloods/utils/: bloods.py  config.py  database.py
CTFd/plugins/dynamic_challenges/: __init__.py
CTFd/schemas/: config.py  teams.py  users.py
CTFd/themes/admin/: package.json
CTFd/themes/core/: package.json
CTFd/themes/ctfd-modern-theme/: .gitignore
CTFd/themes/ctfd-modern-theme/static/: manifest.json
CTFd/utils/exports/: __init__.py
CTFd/utils/helpers/: __init__.py
CTFd/utils/uploads/: __init__.py
migrations/: alembic.ini  env.py
migrations/versions/: 24ad6790bc3c_convert_rating_values_to_votes.py  336b8c601b94_add_modules_and_audiences.py  364b4efa1686_add_ratings_table.py  48d8250d19bd_add_position_to_challenges.py  4fe3eeed9a9d_add_attribution_to_challenges.py  55623b100da8_add_target_column_to_tracking.py  5c98d9253f56_rename_core_beta_to_core.py  62bf576b2cd3_add_solutions_table.py  662d728ad7da_add_change_password_to_users.py  67ebab6de598_add_dynamic_scoring_columns_to_.py  9889b8c53673_add_brackets_table.py  a02c5bf43407_add_link_target_to_pages.py  a49ad66aa0f1_add_title_to_hint.py  e69a79ebffd3_add_cascade_delete_to_solutionfiles.py  f73a96c97449_add_logic_column_to_challenges.py
tests/: helpers.py  test_themes.py
tests/api/v1/: test_solutions.py  test_users.py
tests/cache/: test_challenges.py
tests/utils/: test_ctftime.py  test_sanitize.py  test_sessions.py  test_validators.py
(+35 files in other folders)
