[project]
name = "ctfd"
version = "3.8.6"
description = "CTFs as you need them"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.12"
dependencies = [
    "Flask==2.1.3",
    "Werkzeug==2.2.3",
    "jinja2==3.1.6",
    "Flask-SQLAlchemy==2.5.1",
    "Flask-Caching==2.3.1",
    "Flask-Migrate==2.5.3",
    "Flask-Script==2.0.6",
    "SQLAlchemy==1.4.54",
    "SQLAlchemy-Utils==0.41.1",
    "passlib==1.7.4",
    "bcrypt==4.0.1",
    "requests==2.32.4",
    "PyMySQL[rsa]==1.1.1",
    "gunicorn==23.0.0",
    "dataset==1.6.2",
    "cmarkgfm==2024.11.20",
    "redis==4.5.5",
    "gevent==25.5.1",
    "python-dotenv==0.13.0",
    "flask-restx==1.3.0",
    "flask-marshmallow==0.10.1",
    "marshmallow-sqlalchemy==0.17.0",
    "boto3==1.35.27",
    "marshmallow==2.20.2",
    "pydantic==1.6.2",
    "WTForms==2.3.1",
    "python-geoacumen-city==2023.4.15",
    "maxminddb==1.5.4",
    "tenacity==9.1.2",
    "nh3==0.3.0",
    "freezegun==1.5.5",
    "Flask-Babel==2.0.0",
    "Pillow==12.2.0",
    "cffi==1.17.1",
    "six==1.17.0",
    "urllib3==2.6.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-randomly==4.0.1",
    "pytest-xdist==3.8.0",
    "pytest-cov==7.0.0",
    "pytest-sugar==1.1.1",
    "coverage==7.10.7",
    "psycopg2-binary==2.9.6",
    "moto==4.1.11",
    "flask_profiler==1.8.1",
    "sphinx_rtd_theme==0.4.3",
    "flask-debugtoolbar==0.11.0",
    "Faker==4.1.0",
    "ruff==0.15.22",
    "dennis==1.1.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
extend-exclude = ["CTFd/uploads", "node_modules"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C4", "I", "S"]
ignore = [
    "E402",
    "E501",
    "E712",
    "B904",
    "B905",
    "E721",
    "S105",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
"**/tests/**" = ["S"]

[tool.ruff.lint.isort]
known-first-party = ["CTFd", "tests"]
